--- a/libs/fhl.css
+++ b/libs/fhl.css
@@ -1294,6 +1294,13 @@ nav#fhlTopMenu {
     margin-right: 1px;
     font-size: 6pt;
 }
+#fhlLecture span.verseNumber {
+    position: relative;
+    top: -8px;
+    margin-left: 1px;
+    margin-right: 1px;
+    font-size: 6pt;
+}
 #fhlLecture .versionName{
     display: inline-block;
     margin: 5px 0px 0px 10px;
