--- a/libs/fhl.css
+++ b/libs/fhl.css
@@ -1787,3 +1787,12 @@ nav#fhlTopMenu {
 #parsingPopUpInside .sn:hover, #parsingPopUpInside .snParse:hover, #parsingPopUpInside .searchBibleVerse:hover, #parsingPopUpInside .searchSN:hover {
   color: rgba(250, 50, 50, 1);
 }
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;           /* Non-prefixed version, currently
+                                  not supported by any browser */
+}
