bug_加ft的時候,把節去掉了,另外,交錯式「節」顏色加上.

--- a/libs/fhl.css
+++ b/libs/fhl.css
@@ -1796,3 +1796,10 @@ nav#fhlTopMenu {
   user-select: none;           /* Non-prefixed version, currently
                                   not supported by any browser */
 }
+ .lec .ft{
+  cursor:pointer;
+}
+ .lec .ver{
+   color:rgba(0, 80, 255, 1);
+   font-size:0.5em;
+ }
